--- a/app/src/main/res/layout/activity_second.xml
+++ b/app/src/main/res/layout/activity_second.xml
@@ -4,7 +4,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    tools:context="com.xbbbus.SecondActivity">
+    tools:context="com.xbb.SecondActivity">
 
     <Button
         android:id="@+id/button1"
@@ -28,4 +28,9 @@
         android:onClick="toAll"
         android:text="子线程发送"
          />
+
+    <TextView
+        android:id="@+id/content"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content" />
 </LinearLayout>
