--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,6 +14,8 @@
 
     <TextView
         android:id="@+id/content"
+        android:onClick="fasongdier"
+        android:text="发送到第二页面"
         android:layout_width="match_parent"
         android:layout_height="wrap_content" />
 </LinearLayout>
